--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   skip: True  # [win or py3k]
-  number: 1
+  number: 2
   track_features:
       - mesalib
 
@@ -21,9 +21,11 @@ requirements:
       - pthread-stubs
       - pkgconfig
       - gcc  # [linux]
+      - llvm
   run:
       - pthread-stubs
       - libgcc  # [linux]
+      - llvm
 
 test:
   commands:
@@ -41,3 +43,4 @@ extra:
       - dnadeau4
       - doutriaux1
       - sankhesh
+      - danlipsa
