--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
       - pkgconfig
       - gcc  # [linux]
       - llvm
+      - toolchain
   run:
       - pthread-stubs
       - libgcc  # [linux]
