--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,7 @@ about:
   home: http://www.mesa3d.org
   license: MIT
   license_file: docs/license.html
-  summary: Mesa is an open-source implementation of the OpenGL specification - a system for rendering interactive 3D graphics.
+  summary: Mesa is an open-source implementation of the OpenGL specification, a system for rendering interactive 3D graphics.
 
 extra:
     recipe-maintainers:
