--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: ffd8dfe3337b474a3baa085f0e7ef1a32c7cdc3bed1ad810b2633919a9324840
 
 build:
-  skip: True  # [win]
+  skip: True  # [win or py3k]
   number: 0
   track_features:
       - mesalib
