need python to build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
       - toolchain
       - llvmdev
       - expat
+      - python
   run:
       - pthread-stubs
       - libgcc  # [linux]
