need py<3 but if put in skip then all travis/ci disappear

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
       - toolchain
       - llvmdev
       - expat
-      - python
+      - python <3
   run:
       - pthread-stubs
       - libgcc  # [linux]
