trying the comiler trick

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
   build:
       - pthread-stubs
       - pkgconfig
-      - gcc  # [linux]
+      - {{ compiler("c") }}
       - toolchain
       - llvmdev
       - expat
