--- a/.ci_support/linux_c_compilergcccxx_compilergxx.yaml
+++ b/.ci_support/linux_c_compilergcccxx_compilergxx.yaml
@@ -9,7 +9,7 @@ channel_targets:
 cxx_compiler:
 - gxx
 docker_image:
-- conda/c3i-linux-64
+- condaforge/linux-anvil-comp7
 expat:
 - '2.2'
 pin_run_as_build:
