Adding zlib has requested by @looooo

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,10 +23,12 @@ requirements:
       - pkgconfig
       - python 2.*
       - mako
+      - zlib
   host:
       - pthread-stubs
       - llvmdev
       - expat
+      - zlib
 
 test:
   commands:
