--- a/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -19,9 +19,13 @@ macos_min_version:
 pin_run_as_build:
   expat:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
 zip_keys:
 - - c_compiler
   - cxx_compiler
   - channel_sources
   - channel_targets
   - build_number_decrement
+zlib:
+- '1.2'
