--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,10 @@
 {% set name = "mesaLib" %}
 {% set version = "17.3.9" %}  # [linux]
-# 17.1 uses fstatat which isn't defined on OSX.
+# 17.1 uses fstatat which isn't defined on OSX 10.9 (which conda-forge uses)
 # https://github.com/conda-forge/mesalib-feedstock/pull/18#issuecomment-450589848
-{% set version = "17.0.7" %}  # [osx]
+# https://github.com/conda-forge/mesalib-feedstock/pull/20#discussion_r244547648
+#{% set version = "17.0.7" %}  # [osx]
+{% set version = "17.0.6" %}  # [osx]
 
 package:
   name: {{ name|lower }}
@@ -12,7 +14,7 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: ftp://ftp.freedesktop.org/pub/mesa/mesa-{{ version }}.tar.gz
   sha256: 4d625f65a1ff4cd8cfeb39e38f047507c6dea047502a0d53113c96f54588f340  # [linux]
-  sha256: bc68d13c6b1a053b855ac453ebf7e62bd89511adf44bad6c613e09f7fa13390a  # [osx]
+  #sha256: bc68d13c6b1a053b855ac453ebf7e62bd89511adf44bad6c613e09f7fa13390a  # [osx]
   patches:
     # https://patchwork.freedesktop.org/patch/214086/
     - 1-1-gallivm-Fix-build-after-llvm-r328839.patch
