--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: ftp://ftp.freedesktop.org/pub/mesa/mesa-{{ version }}.tar.gz
+  url: ftp://ftp.freedesktop.org/pub/mesa/older-versions/17.x/mesa-{{ version }}.tar.gz
   sha256: 4d625f65a1ff4cd8cfeb39e38f047507c6dea047502a0d53113c96f54588f340  # [linux]
   sha256: bc68d13c6b1a053b855ac453ebf7e62bd89511adf44bad6c613e09f7fa13390a  # [osx]
   patches:
@@ -21,11 +21,7 @@ source:
 
 build:
   skip: True  # [win]
-  # OSX toolchain compiler seems to fail
-  # See build logs here
-  # https://travis-ci.org/conda-forge/mesalib-feedstock/builds/473694795
-  skip: True  # [osx and c_compiler == "toolchain_c"]
-  number: 1001
+  number: 1002
   track_features:
       - mesalib
 
@@ -59,3 +55,5 @@ extra:
       - doutriaux1
       - sankhesh
       - danlipsa
+      - xylar
+      - muryanto1
