--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,5 @@
 {% set name = "mesaLib" %}
-{% set version = "17.3.9" %}  # [linux]
-# 17.1 uses fstatat which isn't defined on OSX 10.9 (which conda-forge uses)
-# It was added in OSX 10.12
-# https://github.com/conda-forge/mesalib-feedstock/pull/18#issuecomment-450589848
-# https://github.com/conda-forge/mesalib-feedstock/pull/20#discussion_r244547648
-{% set version = "17.0.7" %}  # [osx]
+{% set version = "18.0.0" %}
 
 package:
   name: {{ name|lower }}
@@ -13,19 +8,15 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: ftp://ftp.freedesktop.org/pub/mesa/mesa-{{ version }}.tar.gz
-  sha256: 4d625f65a1ff4cd8cfeb39e38f047507c6dea047502a0d53113c96f54588f340  # [linux]
-  sha256: bc68d13c6b1a053b855ac453ebf7e62bd89511adf44bad6c613e09f7fa13390a  # [osx]
+  sha256: 93c2d3504b2871ac2146603fb1270f341d36a39695e2950a469c5eac74f98457
   patches:
     # https://patchwork.freedesktop.org/patch/214086/
     - 1-1-gallivm-Fix-build-after-llvm-r328839.patch
 
 build:
   skip: True  # [win]
-  # OSX toolchain compiler seems to fail
-  # See build logs here
-  # https://travis-ci.org/conda-forge/mesalib-feedstock/builds/473694795
-  skip: True  # [osx and c_compiler == "toolchain_c"]
-  number: 1001
+  number: 0
+  # Do we still need this???? - hmaarrfk - 18.0.0 -- April 2020
   track_features:
       - mesalib
 
@@ -34,9 +25,11 @@ requirements:
       - {{ compiler('c') }}
       - {{ compiler('cxx') }}
       - pkg-config
-      - python 2.*
+      # still too hard to get rid of python2
+      - python 2
       - mako
       - zlib
+      - make
   host:
       - pthread-stubs
       - llvmdev
@@ -59,3 +52,6 @@ extra:
       - doutriaux1
       - sankhesh
       - danlipsa
+      - hmaarrfk
+      - muryanto1
+      - downiec
