--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,31 +1,27 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-build_number_decrement:
-- '0'
+- '10.12'
 c_compiler:
 - clang
+c_compiler_version:
+- '9'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - clangxx
+cxx_compiler_version:
+- '9'
 expat:
 - '2.2'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
-- '10.9'
+- '10.12'
 pin_run_as_build:
   expat:
     max_pin: x.x
   zlib:
     max_pin: x.x
-zip_keys:
-- - c_compiler
-  - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
 zlib:
 - '1.2'
