--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "mesaLib" %}
-{% set version = "18.0.0" %}
+{% set version = "20.1.4" %}
+{% set build = 2 %}
 
 package:
   name: {{ name|lower }}
@@ -7,40 +8,89 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: ftp://ftp.freedesktop.org/pub/mesa/mesa-{{ version }}.tar.gz
-  sha256: 93c2d3504b2871ac2146603fb1270f341d36a39695e2950a469c5eac74f98457
+  url: ftp://ftp.freedesktop.org/pub/mesa/mesa-{{ version }}.tar.xz
+  sha256: 6800271c2be2a0447510eb4e9b67edd9521859a4d565310617c4b359eb6799fe
   patches:
-    # https://patchwork.freedesktop.org/patch/214086/
-    - 1-1-gallivm-Fix-build-after-llvm-r328839.patch
+    - 0001_syscall_kcmp.patch
 
 build:
   skip: True  # [win]
-  number: 1
-  # Do we still need this???? - hmaarrfk - 18.0.0 -- April 2020
+  number: {{ build }}
+
   track_features:
-      - mesalib
+    - mesalib
 
 requirements:
   build:
-      - {{ compiler('c') }}
-      - {{ compiler('cxx') }}
-      - pkg-config
-      # still too hard to get rid of python2
-      - python 2
-      - mako
-      - zlib
-      - make
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - {{ cdt('xorg-x11-proto-devel') }}
+    - {{ cdt('libxxf86vm-devel') }}
+    - {{ cdt('libxshmfence-devel') }}
+    - meson
+    - mako
+    - flex
+    - bison
+    - pkg-config
+
   host:
-      - pthread-stubs
-      - llvmdev
-      - expat
-      - zlib
+    - expat
+    - zlib
+    - libdrm                       # [linux]
+    - elfutils                     # [linux]
+    - ncurses
+    - llvmdev
+    - xorg-libx11
+    - xorg-libxcb
+    - xorg-libxext
+    - xorg-xextproto
+    - xorg-glproto
+    - xorg-xf86vidmodeproto
+    - xorg-libxdamage
+    - xorg-libxrandr               # [osx]
+    - xorg-libxfixes
+
+  run:
+    - xorg-libx11
+    - xorg-libxcb
+    - xorg-libxext
+    - xorg-xextproto
+    - xorg-glproto
+    - xorg-xf86vidmodeproto
+    - xorg-libxdamage              # [linux]
+    - xorg-libxfixes
+
   run_constrained:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx]
 
 test:
+  requires:
+    - pkg-config
+
   commands:
-      - test -f $PREFIX/lib/libOSMesa32${SHLIB_EXT}  # [unix]
+    - test -f $PREFIX/lib/dri/kms_swrast_dri${SHLIB_EXT}  # [linux]
+    - test -f $PREFIX/lib/dri/swrast_dri${SHLIB_EXT}      # [linux]
+    - test -f $PREFIX/lib/libgbm${SHLIB_EXT}              # [linux]
+    - test -f $PREFIX/lib/libGLESv1_CM${SHLIB_EXT}        # [linux]
+    - test -f $PREFIX/lib/libGLESv2${SHLIB_EXT}           # [linux]
+    - test -f $PREFIX/lib/libEGL${SHLIB_EXT}              # [linux]
+    - test -f $PREFIX/lib/libGL${SHLIB_EXT}               # [linux]
+    - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}           # [linux]
+    - test -f $PREFIX/lib/libglapi${SHLIB_EXT}            # [linux]
+
+    - test -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
+    - test -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
+    - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
+    - test -f $PREFIX/lib/libGL.1${SHLIB_EXT}         # [osx]
+    - test -f $PREFIX/lib/libglapi.0${SHLIB_EXT}      # [osx]
+
+    - pkg-config --exists glesv1_cm
+    - pkg-config --exists glesv2
+    - pkg-config --exists osmesa
+    # Disable gl, egl for linux, issue with xxf86vm missing dependency, disbale OpenGL?
+    - pkg-config --exists gl        # [osx]
+    # - pkg-config --exists egl
+    - pkg-config --exists gbm       # [linux]
 
 about:
   home: http://www.mesa3d.org
@@ -50,8 +100,6 @@ about:
 
 extra:
     recipe-maintainers:
-      - dnadeau4
-      - doutriaux1
       - sankhesh
       - danlipsa
       - hmaarrfk
