--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,3 +4,6 @@ macos_min_version:             # [osx]
   - 10.12                      # [osx]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 10.12                      # [osx]
+
+channel_targets:
+  - conda-forge mesalib_dev
