--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "mesaLib" %}
-{% set version = "20.1.4" %}
-{% set build = 2 %}
+{% set version = "20.1.4.rc1" %}
+{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
