--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ test:
 about:
   home: http://www.mesa3d.org
   license: MIT
+  license_family: MIT
   license_file: docs/license.html
   summary: Mesa is an open-source implementation of the OpenGL specification - a system for rendering interactive 3D graphics.
 
