--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,8 +37,8 @@ requirements:
   host:
     - expat
     - zlib
-    - libdrm                       # [linux and not (aarch64 or ppc64le)]
-    - elfutils                     # [linux and not (aarch64 or ppc64le)]
+    - libdrm                       # [linux]
+    - elfutils                     # [linux]
     - ncurses
     - llvmdev
     - xorg-libx11
@@ -47,9 +47,9 @@ requirements:
     - xorg-xf86vidmodeproto
     - xorg-libxrandr
     - xorg-libxfixes
-    - xorg-glproto                 # [not (aarch64 or ppc64le)]
-    - xorg-libxcb                  # [not (aarch64 or ppc64le)]
-    - xorg-libxdamage              # [not (aarch64 or ppc64le)]
+    - xorg-glproto
+    - xorg-libxcb
+    - xorg-libxdamage
 
   run:
     - xorg-libx11
@@ -58,9 +58,9 @@ requirements:
     - xorg-xf86vidmodeproto
     - xorg-libxrandr
     - xorg-libxfixes
-    - xorg-glproto                 # [not (aarch64 or ppc64le)]
-    - xorg-libxcb                  # [not (aarch64 or ppc64le)]
-    - xorg-libxdamage              # [not (aarch64 or ppc64le)]
+    - xorg-glproto
+    - xorg-libxcb
+    - xorg-libxdamage
 
   run_constrained:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx]
