--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -3,7 +3,7 @@ MACOSX_DEPLOYMENT_TARGET:
 c_compiler:
 - clang
 c_compiler_version:
-- '9'
+- '11'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -11,17 +11,24 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '9'
+- '11'
 expat:
-- '2.2'
+- '2'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.12'
+ncurses:
+- '6.2'
 pin_run_as_build:
-  expat:
+  ncurses:
     max_pin: x.x
   zlib:
     max_pin: x.x
+target_platform:
+- osx-64
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1.2'
