--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @danlipsa @downiec @hmaarrfk @jasonb5 @muryanto1 @sankhesh
+* @danlipsa @downiec @hmaarrfk @jasonb5 @matthiasdiener @muryanto1 @sankhesh
