--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -101,6 +101,8 @@ about:
 
 extra:
     recipe-maintainers:
+      - dnadeau4
+      - doutriaux1
       - sankhesh
       - danlipsa
       - hmaarrfk
