--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -94,7 +94,8 @@ test:
 about:
   home: https://www.mesa3d.org
   license: MIT
-  license_file: docs/license.html
+  license_family: MIT
+  license_file: docs/license.rst
   summary: Mesa is an open-source implementation of the OpenGL specification - a system for rendering interactive 3D graphics.
   dev_url: https://gitlab.freedesktop.org/mesa/mesa
   doc_url: https://docs.mesa3d.org/
