--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - {{ cdt('xorg-x11-proto-devel') }}
     - {{ cdt('libxxf86vm-devel') }}
     - {{ cdt('libxshmfence-devel') }}
+    - sysroot_linux-64 2.17  # [linux64]
     - meson
     - mako
     - flex
