add osx arm support

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,3 +2,5 @@ provider: {linux_aarch64: default, linux_ppc64le: azure}
 conda_forge_output_validation: true
 os_version:
   linux_64: cos7
+build_platform:
+  osx_arm64: osx_64
