--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "mesaLib" %}
 {% set version = "21.2.5" %}
-{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +12,7 @@ source:
 
 build:
   skip: True  # [win]
-  number: {{ build }}
+  number: 0
 
   track_features:
     - mesalib
