--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,9 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ cdt('xorg-x11-proto-devel') }}
-    - {{ cdt('libxxf86vm-devel') }}
-    - {{ cdt('libxshmfence-devel') }}
+    - {{ cdt('xorg-x11-proto-devel') }}  # [not (osx and arm64)]
+    - {{ cdt('libxxf86vm-devel') }}  # [not (osx and arm64)]
+    - {{ cdt('libxshmfence-devel') }}  # [not (osx and arm64)]
     - sysroot_linux-64 2.17  # [linux64]
     - meson
     - mako
