--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,6 +1,6 @@
 # New versions need clock_gettime
 # which is supported in 10.12 and later
-macos_min_version:             # [osx]
-  - 10.12                      # [osx]
-MACOSX_DEPLOYMENT_TARGET:      # [osx]
-  - 10.12                      # [osx]
+macos_min_version:             # [osx and x86_64]
+  - 10.12                      # [osx and x86_64]
+MACOSX_DEPLOYMENT_TARGET:      # [osx and x86_64]
+  - 10.12                      # [osx and x86_64]
