Try to build both version of the mesa lib

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   skip: True  # [win]
-  number: 0
+  number: 1
 
   track_features:
     - mesalib
@@ -66,6 +66,12 @@ test:
     - pkg-config
 
   commands:
+    # 32 bit version
+    - test -f $PREFIX/lib/libOSMesa32${SHLIB_EXT}  # [unix]
+    # 8 bit version
+    - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}           # [linux]
+    - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
+
     - test -f $PREFIX/lib/dri/kms_swrast_dri${SHLIB_EXT}  # [linux]
     - test -f $PREFIX/lib/dri/swrast_dri${SHLIB_EXT}      # [linux]
     - test -f $PREFIX/lib/libgbm${SHLIB_EXT}              # [linux]
@@ -73,12 +79,10 @@ test:
     - test -f $PREFIX/lib/libGLESv2${SHLIB_EXT}           # [linux]
     - test -f $PREFIX/lib/libEGL${SHLIB_EXT}              # [linux]
     - test -f $PREFIX/lib/libGL${SHLIB_EXT}               # [linux]
-    - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}           # [linux]
     - test -f $PREFIX/lib/libglapi${SHLIB_EXT}            # [linux]
 
     - test -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
     - test -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
-    - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
     - test -f $PREFIX/lib/libGL.1${SHLIB_EXT}         # [osx]
     - test -f $PREFIX/lib/libglapi.0${SHLIB_EXT}      # [osx]
 
