--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   skip: True  # [win]
-  number: 2
+  number: 3
 
   track_features:
     - mesalib
@@ -65,28 +65,31 @@ test:
   requires:
     - pkg-config
   commands:
-    - test -f $PREFIX/lib/dri/kms_swrast_dri${SHLIB_EXT}  # [linux]
-    - test -f $PREFIX/lib/dri/swrast_dri${SHLIB_EXT}      # [linux]
-    - test -f $PREFIX/lib/libgbm${SHLIB_EXT}              # [linux]
-    - test -f $PREFIX/lib/libGLESv1_CM${SHLIB_EXT}        # [linux]
-    - test -f $PREFIX/lib/libGLESv2${SHLIB_EXT}           # [linux]
-    - test -f $PREFIX/lib/libEGL${SHLIB_EXT}              # [linux]
-    - test -f $PREFIX/lib/libGL${SHLIB_EXT}               # [linux]
+    # We assert that we didn't build screen rendering capabilities.
+    # We want on-screen rendering capabilities to be hardware accelerated
+    # but that will take more effort
+    - test ! -f $PREFIX/lib/dri/kms_swrast_dri${SHLIB_EXT}  # [linux]
+    - test ! -f $PREFIX/lib/dri/swrast_dri${SHLIB_EXT}      # [linux]
+    - test ! -f $PREFIX/lib/libgbm${SHLIB_EXT}              # [linux]
+    - test ! -f $PREFIX/lib/libGLESv1_CM${SHLIB_EXT}        # [linux]
+    - test ! -f $PREFIX/lib/libGLESv2${SHLIB_EXT}           # [linux]
+    - test ! -f $PREFIX/lib/libEGL${SHLIB_EXT}              # [linux]
+    - test ! -f $PREFIX/lib/libGL${SHLIB_EXT}               # [linux]
     - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}           # [linux]
     - test -f $PREFIX/lib/libglapi${SHLIB_EXT}            # [linux]
 
-    - test -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
-    - test -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
+    - test ! -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
+    - test ! -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
     - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
-    - test -f $PREFIX/lib/libGL.1${SHLIB_EXT}         # [osx]
+    - test ! -f $PREFIX/lib/libGL.1${SHLIB_EXT}         # [osx]
     - test -f $PREFIX/lib/libglapi.0${SHLIB_EXT}      # [osx]
 
-    - pkg-config --exists glesv1_cm
-    - pkg-config --exists glesv2
+    # - pkg-config --exists glesv1_cm
+    # - pkg-config --exists glesv2
     - pkg-config --exists osmesa
     # - pkg-config --exists gl
     # - pkg-config --exists egl
-    - pkg-config --exists gbm       # [linux]
+    # - pkg-config --exists gbm       # [linux]
 
 about:
   home: https://www.mesa3d.org
