--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - flex
     - bison
     - pkg-config
+    - llvm
 
   host:
     - expat
@@ -47,6 +48,7 @@ requirements:
     - xorg-glproto
     - libxcb
     - xorg-libxdamage
+    - llvm
 
   run:
     - xorg-libx11
@@ -57,6 +59,7 @@ requirements:
     - xorg-libxfixes
     - xorg-glproto
     - xorg-libxdamage
+    - llvm
 
   run_constrained:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx]
