Require llvmdev on all platforms

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,8 +30,7 @@ requirements:
     - flex
     - bison
     - pkg-config
-    - llvmdev                      # [linux]
-
+    - llvmdev
   host:
     - expat
     - zlib
