Apply suggestions from code review

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - flex
     - bison
     - pkg-config
-    - llvmdev
+    - llvmdev                      # [linux]
   host:
     - expat
     - zlib
