Try just adding it to host

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,8 @@ requirements:
     - libdrm                       # [linux]
     - elfutils                     # [linux]
     - ncurses
-    - llvm
+    - llvm     # [linux]
+    - llvmdev  # [linux]
     - xorg-libx11
     - xorg-libxext
     - xorg-xextproto
