--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,9 +1,13 @@
-provider: {linux_aarch64: default, linux_ppc64le: azure}
+provider:
+  linux_aarch64: azure
+  linux_ppc64le: azure
 conda_forge_output_validation: true
 os_version:
   linux_64: cos7
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 test_on_native_only: true
 github:
   branch_name: main
