--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
   host:
     - expat
     - zlib
+    - zstd
     - libdrm                       # [linux]
     - elfutils                     # [linux]
     - ncurses
