--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,6 +49,7 @@ requirements:
     - xorg-glproto
     - libxcb
     - xorg-libxdamage
+    - wayland-protocols
   run:
     - xorg-libx11
     - xorg-libxext
@@ -59,7 +60,7 @@ requirements:
     - xorg-libxfixes
     - xorg-glproto
     - xorg-libxdamage
-
+    - wayland-protocols
 
 test:
   requires:
@@ -80,8 +81,8 @@ test:
 
     - test ! -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
     - test ! -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
-    - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
     - test ! -f $PREFIX/lib/libGL.1${SHLIB_EXT}         # [osx]
+    - test -f $PREFIX/lib/libOSMesa.8${SHLIB_EXT}     # [osx]
     - test -f $PREFIX/lib/libglapi.0${SHLIB_EXT}      # [osx]
 
     # - pkg-config --exists glesv1_cm
