--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - zlib
     - zstd
     - libdrm                       # [linux]
+    - wayland-protocols            # [linux]
     - elfutils                     # [linux]
     - ncurses
     - llvm     # [linux]
@@ -49,7 +50,6 @@ requirements:
     - xorg-glproto
     - libxcb
     - xorg-libxdamage
-    - wayland-protocols
   run:
     - xorg-libx11
     - xorg-libxext
