--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
     - {{ cdt('libxshmfence-devel') }}    # [linux]
     - meson
+    - cmake
     - mako
     - flex
     - bison
@@ -35,6 +36,7 @@ requirements:
     - zlib
     - zstd
     - libdrm                       # [linux]
+    - libudev                      # [linux]
     - wayland-protocols            # [linux]
     - elfutils                     # [linux]
     - ncurses
