--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,7 @@
-{% set name = "mesaLib" %}
 {% set version = "24.3.4" %}
 
 package:
-  name: {{ name|lower }}
+  name: mesalib
   version: {{ version }}
 
 source:
