--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - {{ stdlib('c') }}
     - {{ compiler('cxx') }}
     - meson
+    - cmake
     - pyyaml
     - mako
     - flex
