ofc glslang needed on all platforms

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ requirements:
     - zstd
     - libdrm                       # [linux]
     - elfutils                     # [linux]
-    - glslang                      # [linux]
+    - glslang
     - ncurses
     - llvm
     - llvmdev
@@ -66,8 +66,8 @@ test:
     - test ! -f $PREFIX/lib/libEGL${SHLIB_EXT}                # [linux]
     - test ! -f $PREFIX/lib/libGL${SHLIB_EXT}                 # [linux]
     - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}               # [linux]
-    - test -f $PREFIX/lib/libvulkan_lvp${SHLIB_EXT}           # [linux]
-    - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.x86_64.json  # [linux]
+    - test -f $PREFIX/lib/libvulkan_lvp${SHLIB_EXT}           # [unix]
+    - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.x86_64.json  # [unix]
 
     - test ! -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
     - test ! -f $PREFIX/lib/libGLESv2.2${SHLIB_EXT}     # [osx]
