add to both build(cross) and host

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: adf904d083b308df95898600ffed435f4b5c600d95fb6ec6d4c45638627fdc97
 
 build:
-  skip: true  # [win or linux]
+  skip: true  # [win]
   number: 1
 
   track_features:
@@ -31,14 +31,14 @@ requirements:
     - llvm
     - llvmdev       # [build_platform != target_platform]
     - jq
-    - glslang
+    - glslang       # [build_platform != target_platform]
   host:
     - expat
     - zlib
     - zstd
     - libdrm                       # [linux]
     - elfutils                     # [linux]
-    #- glslang
+    - glslang
     - ncurses
     - llvm
     - llvmdev
@@ -70,7 +70,7 @@ test:
     - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}                # [linux]
     - test -f $PREFIX/lib/libvulkan_lvp${SHLIB_EXT}            # [unix]
     - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.x86_64.json   # [x86_64]
-    - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.aarch64.json    # [aarch64]
+    - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.aarch64.json  # [aarch64]
     - test -f $PREFIX/share/vulkan/icd.d/lvp_icd.ppc64le.json  # [ppc64le]
 
     - test ! -f $PREFIX/lib/libGLESv1_CM.1${SHLIB_EXT}  # [osx]
