--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,9 +48,8 @@ requirements:
     - xorg-libxrandr
     - xorg-libxfixes
     - xorg-libxdamage
-    - xorg-libxshmfence  # [osx]
     - xorg-libxxf86vm    # [linux]
-    - xorg-libxshmfence  # [linux]
+    - xorg-libxshmfence
 
 test:
   requires:
